<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_margin="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_movie"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/image_movie_description"
            android:scaleType="centerInside"/>

        <TextView
            android:id="@+id/text_movie_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_movie"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:maxLines="2"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/text_movie_description"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/text_movie_name"
            app:layout_constraintStart_toEndOf="@id/image_movie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/icon_calendar"
            android:layout_margin="10dp"
            android:ellipsize="end"/>

        <ImageView
            android:id="@+id/icon_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/image_movie"
            app:layout_constraintStart_toEndOf="@id/image_movie"
            android:layout_margin="10dp"
            android:background="@drawable/ic_calendar"
            android:contentDescription="@string/icon_calendar_description" />

        <TextView
            android:id="@+id/text_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/icon_calendar"
            app:layout_constraintBottom_toBottomOf="@id/icon_calendar"
            app:layout_constraintStart_toEndOf="@id/icon_calendar"
            android:layout_margin="10dp"/>

        <ImageButton
            android:id="@+id/btn_like_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/icon_calendar"
            app:layout_constraintBottom_toBottomOf="@id/icon_calendar"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="10dp"
            android:contentDescription="@string/btn_like_description"
            android:src="@drawable/ic_favorite_border"
            android:background="?attr/selectableItemBackgroundBorderless"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>